--- a/recipes/choc-brownies.html
+++ b/recipes/choc-brownies.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Chocolate Brownies</h1>
+        <img src="../img/brownie.jpg" alt="Chocolate Brownie">
     </body>
 
 </html>
