--- a/recipes/choc-brownies.html
+++ b/recipes/choc-brownies.html
@@ -7,6 +7,25 @@
     <body>
         <h1>Chocolate Brownies</h1>
         <img src="../img/brownie.jpg" alt="Chocolate Brownie">
+
+        <H4>Chocolate brownie</H4>
+
+        <p>
+            These are my "go to" brownies, the one I have been making for years that's super easy and outrageously chocolatey. The best fudgey chocolatey brownies made without fuss, in one bowl in 10 minutes. These are not the cakey kind, they're soft fudgey kind. Super rich and moist!
+        </p>
+
+        <ul>
+            <li>200g / 14 tbsp unsalted butter (1 3/4 US sticks)</li>
+            <li>200 g / 1 1/4 cups dark chocolate chips (7 oz) (Note 1)</li>
+            <li>1 cup (175g) brown sugar , loosely packed</li>
+            <li>3 eggs , lightly beaten</li>
+            <li>1 tsp vanilla extract</li>
+            <li>1/2 cup (75g) plain flour</li>
+            <li>1/4 cup (30g) cocoa powder</li>
+            <li>Pinch of salt</li>
+            <li>180g/6oz dark chocolate block/bar (optional) , chopped into chunks rather than shards, (bittersweet or semi-sweet, cooking chocolate)   (Note 2)</li>
+            
+        </ul>       
     </body>
 
 </html>
