--- a/recipes/choc-brownies.html
+++ b/recipes/choc-brownies.html
@@ -23,9 +23,20 @@
             <li>1/2 cup (75g) plain flour</li>
             <li>1/4 cup (30g) cocoa powder</li>
             <li>Pinch of salt</li>
-            <li>180g/6oz dark chocolate block/bar (optional) , chopped into chunks rather than shards, (bittersweet or semi-sweet, cooking chocolate)   (Note 2)</li>
-            
-        </ul>       
+            <li>180g/6oz dark chocolate block/bar (optional) , chopped into chunks rather than shards, (bittersweet or semi-sweet, cooking chocolate)   (Note 2)</li> 
+        </ul>      
+        
+        <ol>
+            <li>Preheat oven to 180°C/350°F (160°C fan forced)</li>
+            <li>Spray a 20cm/8" square tin with oil and line with baking/parchment paper with overhang (Note 2).</li>
+            <li>Place butter and chocolate chips in a heatproof bowl, microwave in 30 second bursts (takes me 1m 30 sec) until melted. Stir until smooth.</li>
+            <li>Add sugar and vanilla, mix, then add eggs and mix well until smooth and molten.</li>
+            <li>Add flour, cocoa and salt and stir until smooth. Stir in chopped chocolate, pour into pan</li>
+            <li>Bake 24 minutes for really gooey in the centre, 28 minutes for fudgey but still very moist (my favourie, shown in video & photos), 32 minutes for moist fudge-cake-like. (See in post for toothpick testphotos).</li>
+            <li>If you didn't use the extra chocolate for stirring in, reduce cook time by 2 minutes.</li>
+            <li>Rest for 10 minutes before lifting out of the pan. Allow to cool for at least 20 minutes before cutting. Store in an airtight container for 4 days (bet they don't last that long!) or freeze for 3 months.</li>
+            <li></li>
+        </ol>
     </body>
 
 </html>
