Framework upated Headings included for ingrediets, method and notes Bolding added for the start of each note

--- a/recipes/choc-brownies.html
+++ b/recipes/choc-brownies.html
@@ -8,13 +8,14 @@
         <h1>Chocolate Brownies</h1>
         <img src="../img/brownie.jpg" alt="Chocolate Brownie">
 
-        <H4>Chocolate brownie</H4>
+        <H2>Chocolate brownie</H2>
 
         <p>
             These are my "go to" brownies, the one I have been making for years that's super easy and outrageously chocolatey. The best fudgey chocolatey brownies made without fuss, in one bowl in 10 minutes. These are not the cakey kind, they're soft fudgey kind. Super rich and moist!
         </p>
 
         <ul>
+            <h3>Ingredients</h3>
             <li>200g / 14 tbsp unsalted butter (1 3/4 US sticks)</li>
             <li>200 g / 1 1/4 cups dark chocolate chips (7 oz) (Note 1)</li>
             <li>1 cup (175g) brown sugar , loosely packed</li>
@@ -27,6 +28,7 @@
         </ul>      
         
         <ol>
+            <h3>Mehtod</h3>
             <li>Preheat oven to 180°C/350°F (160°C fan forced)</li>
             <li>Spray a 20cm/8" square tin with oil and line with baking/parchment paper with overhang (Note 2).</li>
             <li>Place butter and chocolate chips in a heatproof bowl, microwave in 30 second bursts (takes me 1m 30 sec) until melted. Stir until smooth.</li>
@@ -35,7 +37,14 @@
             <li>Bake 24 minutes for really gooey in the centre, 28 minutes for fudgey but still very moist (my favourie, shown in video & photos), 32 minutes for moist fudge-cake-like. (See in post for toothpick testphotos).</li>
             <li>If you didn't use the extra chocolate for stirring in, reduce cook time by 2 minutes.</li>
             <li>Rest for 10 minutes before lifting out of the pan. Allow to cool for at least 20 minutes before cutting. Store in an airtight container for 4 days (bet they don't last that long!) or freeze for 3 months.</li>
-            <li></li>
+        </ol>
+
+        <ol>
+            <h3>Notes</h3>
+            <li> <strong>Chocolate</strong>  - Use cooking chocolate chips from the baking section of the supermarket, not eating chocolate.</li>
+            <li> <strong>Lining pan</strong> - Have overhang so you can lift the brownies out of the tin.</li>
+            <li> <strong>Baking measures</strong> - Cups, tbsp and tsp measures differ slightly in size between countries. For most recipes on my blog, the difference is not enough to make a difference, or the difference is relative and consistent across all ingredients in a recipe. Where the difference DOES matter, I specify the measurements for different countries, like I do for my Chewy Oatmeal Raisin cookies. For this recipe, it DOES NOT matter so you can use cups or weights per the recipe, no matter which country you are in. The only exception is Japan, please use the weight measures, not cups.</li>
+            <li> <strong>Storage</strong> - airtight container for 4 days, refrigerate only if it's very hot. Or freeze for up to 3 months.</li>
         </ol>
     </body>
 
