--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 
     <body>
         <h1> Odin Recipes </h1>
-        <a href="./recipes/choc-brownies.html">Chocolate Brownies</a>
+
+        <ul>
+            <li><a href="./recipes/choc-brownies.html">Chocolate Brownies</a></li>
+            <li><a href="./recipes/blueberry-cheesecake.html">Blueberry Cheesecake</a></li>
+            
+        </ul>
     </body>
 
 </html>
