blueberry cheesecake website completed

--- a/recipes/blueberry-cheesecake.html
+++ b/recipes/blueberry-cheesecake.html
@@ -14,33 +14,134 @@
             To say this Blueberry Cheesecake is bursting with blueberries is an understatement! Baked to achieve that elusive light-yet-rich creamy cheesecake filling, studded with blueberries inside and smothered in an incredible glossy blueberry sauce topping. It’s magnificent!
         </p>
 
-        <p>Don't be daunted by the number of steps - they are straightforward, I've just broken it down into managable steps. Cheesecakes are actually less "risky" than cakes because - no worries about not rising, sinking in middle etc.</p>
+        <p>
+            Don't be daunted by the number of steps - they are straightforward, I've just broken it down into managable steps. Cheesecakes are actually less "risky" than cakes because - no worries about not rising, sinking in middle etc.
+        </p>
 
-        <p>If blueberries are expensive right now but you're absolutely busting to make this, skip the topping and serve with cream instead.</p>
+        <p>
+            If blueberries are expensive right now but you're absolutely busting to make this, skip the topping and serve with cream instead.
+        </p>
 
-        <ul> <h2>Ingredients</h2>
+        <ul> 
+            <h2>Ingredients</h2>
+
             <h3>Cheesecake Biscut Base</h3>
-            <li>200g/ 7 oz Arnott's Marie crackers or other plain biscuit (Aus) or 28 Graham Cracker squares (Note 1)</li>
-            <li>120g / 8 tbsp unsalted butter , melted</li>
+                <li>200g/ 7 oz Arnott's Marie crackers or other plain biscuit (Aus) or 28 Graham Cracker squares (Note 1)</li>
+                <li>120g / 8 tbsp unsalted butter , melted</li>
 
             <h3>Cheesecake Filling</h3>
-            <li>1 lb / 500g cream cheese , well softened (Note 2)</li>
-            <li>2 tbsp flour , plain/ all purpose flour</li>
-            <li>1 tsp vanilla extract</li>
-            <li>1/2 cup sour cream (full fat, sub yogurt)</li>
-            <li>1 1/2 cups caster sugar (superfine sugar)</li>
-            <li>Zest of 1 lemon (can skip)</li>
-            <li>3 eggs , at room temperature</li>
-            <li>250g / 8oz blueberries (Note 3)</li>
+                <li>1 lb / 500g cream cheese , well softened (Note 2)</li>
+                <li>2 tbsp flour , plain/ all purpose flour</li>
+                <li>1 tsp vanilla extract</li>
+                <li>1/2 cup sour cream (full fat, sub yogurt)</li>
+                <li>1 1/2 cups caster sugar (superfine sugar)</li>
+                <li>Zest of 1 lemon (can skip)</li>
+                <li>3 eggs , at room temperature</li>
+                <li>250g / 8oz blueberries (Note 3)</li>
 
             <h3> Blueberry Topping for Cheesecake </h3>
-            <li>375g / 13 oz blueberries (Note 3)</li>
-            <li>2 tbsp lemon juice (or water)</li>
-            <li>1/2 cup white sugar</li>
-            <li>1/2 tsp vanilla extract</li>
-            <li>1 1/2 tsp cornflour/cornstarch</li>
-            <li>2 tbsp water</li>
+                <li>375g / 13 oz blueberries (Note 3)</li>
+                <li>2 tbsp lemon juice (or water)</li>
+                <li>1/2 cup white sugar</li>
+                <li>1/2 tsp vanilla extract</li>
+                <li>1 1/2 tsp cornflour/cornstarch</li>
+                <li>2 tbsp water</li>
         </ul>
+
+        <ol>
+            <h2>Instructions</h2>
+
+            <h3>Preperation:</h3>
+                <li> <strong>Preheat oven</strong> to 160°C/320°F (140°C fan). Place shelf in middle of oven.</li>
+                <li> <strong>Line inverted base:</strong> Get a 20cm/8" springform cake tin. Turn the base UPSIDE DOWN (Note 4), butter lightly then press on a square piece of parchment/baking paper. Then clip into the springform pan - excess paper will stick out.</li>
+                <li><strong>Line sides:</strong> Butter and line the side of the pan.</li>
+        </ol>
+
+        <ol>
+            <h3>Cheesecake Biscut Base</h3>
+                <li>Break up biscuits roughly by hand and place in a food processor.</li>
+                <li>Blitz until fine crumbs. Add butter, briefly blitz until dispersed and it resembles wet sand.(Note 5)</li>
+                <li>Pour into the prepared cake tin. Use a spatula to roughly spread it out over the base and up the walls</li>
+                <li>Use something with a flat base and vertical edges (I use a measuring cup) to press the crumbs up the wall almost to the top of the sides, and flatten the base.</li>
+        </ol>
+
+        <ol>
+            <h3>Filling</h3>
+                <li><strong>Cream cheese:</strong> Use a stand mixer (with paddle) or handheld beater to beat the cream cheese until just smooth, no longer than 20 seconds on speed 4. (You do not want to aerate cheesecake filling too much as it causes cracks when it bakes)</li>
+                <li>Add flour, beat for 5 seconds on speed 4 until just incorporated.</li>
+                <li>Add vanilla, sour cream, sugar and lemon zest. Beat until just combined (10 sec max, speed 4).</li>
+                <li><strong>Eggs:</strong>  Add eggs one at a time - beat for 5 seconds on speed 4 in between each. After the last egg, beat as needed until batter is smooth - but stop beating immediately once smooth.</li>
+                <li><strong>Blueberries:</strong>  Stir in blueberries with a rubber spatula. Pour into prepared crust.</li>
+                <li><strong>Bake:</strong>  Bake for 70 minutes. The top should be a bit puffed, very light golden brown, not cracked, and near perfectly flat. It should jiggle slightly when you gently shake the pan, see video at 1 min 23 sec (sets in next step).</li>
+                <li><strong>Cool:</strong>  Cool the cake in the oven with the door open approx 20 cm / 8" for about 2 hours (Note 6), then refrigerate for 4 hours+ in the pan or overnight. Cake will sink and surface should be flat.</li>
+                <li><strong>Release:</strong>  Remove sides of springform pan. Use overhang paper to slide cheesecake off the cake pan base. Then slide the cheesecake off the paper.</li>
+        </ol>
+
+        <ol>
+            <h3>Blueberry Sacue for Cheesecake</h3>
+                <li>Place 1 cup of blueberries (125g/4oz), vanilla, sugar and lemon juice in a saucepan. Stir then bring to simmer over medium heat. Simmer for 7 minutes until blueberries breakdown.</li>
+                <li>Mix cornflour and water, then stir in - it wil thicken quickly.</li>
+                <li>Stir in remainig blueberries. Sauce should be syrupy - remove from stove and cool. Will thicken as it cools.</li>
+                <li>Once cool, stir. Adjust thickness 1/2 teaspoon of water at a time to make it the perfect "oozing" consistency (see video, Note 7) - be careful, don't make it runny</li>
+                <li>Spoon onto cheesecake so it's completely covered - you'll have maybe 1/2 cup sauce left, good for touch ups. Refrigerate 2 hours+.</li>
+                <li>Slice and serve!</li>
+        </ol>
+
+        <ol>
+            <h3>Notes:</h3>
+                <li>Biscuits: Any plain sweet biscuits or crackers will work fine here, you need 2 cups of crumbs.
+                    <ul>
+                        <li>Australia: Arnott's Marie Crackers, Arrowroot and Nice are ideal, I've made it with all these.</li>
+                        <li>US: Use 28 squares / 14 full sheets, yes I measured it with my last Graham Cracker packet I brought back from my last trip.</li>
+                        <li>UK: Digestives are ideal, I LOVE digestives! </li>
+                    </ul>
+                    <p>The crumb should be like wet sand so when pressed, it stays packed firmly, especially up the wall. It's delicate when uncooked but once the filling is cooked, it becomes much more stable.</p>
+                </li>
+
+                <li>Cream Cheese - In the UK and some parts of Europe, block cream cheese isn't available. If you can only get spreadable cream cheese in tubs (softer than block), skip the sour cream.
+                    <p>Make sure the cream cheese is quite soft but not melting. The softer it is = easier to beat until smooth = less beating = less aeration = no cracks. Too much beating = aerated cake = cake rises = cracks.</p>
+                </li>
+
+                <li>Blueberries - fresh or frozen. If using frozen, do not thaw before adding into      batter, and add 5 minutes onto the bake time.
+                    <p>Other berries - blackberries and raspberries should work with no alteration to the recipe as they have similar cooking qualities to blueberries. For strawberries, use this Strawberry Cheesecake recipe.</p> 
+                </li>
+
+                <li><p>Inverted cake pan with overhang paper: The base of springform pans have a slight ridge. By inverting it, there is no ridge which makes it easier to slide the cheesecake on a serving platter without ruining the crust. There is no risk of batter leakage as the crust is thick enough to hold it all in.</p></li>
+
+                <li><p>Crumbs: OR crush in a ziplock bag using a rolling pin or large can.
+                After butter is added, it should just hold together when pressed between fingers.</p>
+                </li>
+
+                <li>
+                    Cool in oven: This ensures creamy inside and stops surface from cracking:
+                    <ul>
+                        <li>Cracks occur due to oven temp too high or overcooking</li>
+                        <li>In this recipe, you stop cooking when it's still quite jiggly (see video at 1 min 23 sec) which means it's actually still a bit undercooked in the middle</li>
+                        <li>By leaving it in the oven, it finishes cooking but the declining temp stops it from overcooking</li>
+                        <li>If you don't do this step, you have to cook for longer in the oven to cook middle through which makes it rise too much = cracked surface and not as creamy inside</li>
+                    </ul>
+                    <p>
+                        (But if yours does crack a touch, it doesn't matter - you're smothering it in blueberry sauce!)
+                    </p>
+                </li>
+
+                <li>
+                    <p>Blueberry topping should be like thick syrup consistency, not a set jelly. It should ooze slightly when cut.</p>
+                </li>
+
+                <li><p> Different measures: Cups and spoons vary slightly between countries (US and CAN are different to most of the rest of the world). I have made the cheesecake recipe using both US and Australian measures, using Australia Marie crackers and US Graham Crackers. The Graham Cracker crust is slightly crunchier because the biscuit doesn't crush to a fine sand like Marie Crackers do. Both are delicious!
+                </p></li>
+
+                <li><p>
+                    Make Ahead / Storage: Cake is at its best consumed within 4 days, after that I feel like it starts getting denser but still really fab, most people wouldn't notice a difference! Ideal to top the day or or day before. After 2 to 3 days, the top does start to "sweat" but it's not very noticeable.
+                </li></p>
+
+
+
+
+
+        </ol>
+
     </body>
 
 </html>
