--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <ul>
             <li><a href="./recipes/choc-brownies.html">Chocolate Brownies</a></li>
             <li><a href="./recipes/blueberry-cheesecake.html">Blueberry Cheesecake</a></li>
-            
+            <li><a href="./recipes/broccoli-pasta.html">Broccoli Pasta </a>
         </ul>
     </body>
 
